# exist_io_integration

./: .gitignore  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
src/exist_backup/: __init__.py  api.py  cli.py  config.py  db.py  export.py  formatting.py  sync.py
src/exist_backup/templates/: daily.md.j2  weekly.md.j2
tests/: conftest.py  test_api.py  test_export.py  test_formatting.py  test_sync.py
tests/fixtures/: attributes.json  profile.json  values.json
